--- a/ui/analyse/css/_analyse.free.scss
+++ b/ui/analyse/css/_analyse.free.scss
@@ -6,33 +6,7 @@ $label-width: 5ch;
 .copyables {
   .pair {
     @extend %flex-center;
-
     position: relative;
-
-    .action {
-      @extend %box-radius-bottom;
-
-      position: absolute;
-      @include inline-end(0);
-      top: 100%;
-      text-align: right;
-      visibility: hidden;
-      opacity: 0;
-
-      @include transition;
-
-      @media (prefers-reduced-motion: reduce) {
-        // Keep the button visible until it was focused
-        transition: all 1ms !important;
-      }
-    }
-
-    textarea:focus ~ .action,
-    .action:active,
-    .action:focus-visible {
-      visibility: visible;
-      opacity: 1;
-    }
   }
 
   .name {
@@ -60,15 +34,48 @@ $label-width: 5ch;
     }
   }
 
-  .pgn-error {
-    margin: 0 0 0 calc($label-width + 1ch);
-    border-radius: 5px;
+  .bottom-item {
+    position: absolute;
+    top: 100%;
+    visibility: hidden;
+    opacity: 0;
+
+    @include transition;
+
+    @media (prefers-reduced-motion: reduce) {
+      // Keep the button visible until it was focused
+      transition: all 1ms !important;
+    }
+  }
+
+  .bottom-error {
+    left: calc($label-width + 1ch);
+    margin-top: 0.5em;
     font-size: 90%;
     color: $c-bad;
 
     &::before {
       margin-right: 0.4em;
     }
+
+    &.is-error {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  .bottom-action {
+    @extend %box-radius-bottom;
+
+    @include inline-end(0);
+    text-align: right;
+  }
+
+  textarea:focus ~ .bottom-action,
+  .bottom-action:active,
+  .bottom-action:focus-visible {
+    visibility: visible;
+    opacity: 1;
   }
 }
 
