Add 'copy url' buttons to 'game gif' and 'position gif' hyperlinks

--- a/ui/analyse/css/_round-underboard.scss
+++ b/ui/analyse/css/_round-underboard.scss
@@ -101,7 +101,8 @@ $col2-panel-height: 240px;
     }
 
     strong,
-    a {
+    a,
+    button {
       display: inline-block;
       margin-inline-end: 1em;
     }
