--- a/ui/common/css/theme/board/_board-3d.scss
+++ b/ui/common/css/theme/board/_board-3d.scss
@@ -70,7 +70,10 @@ $piece-files: (
 @each $name, $flips in $piece-files {
   @each $color in 'White', 'Black' {
     @each $type in 'Pawn', 'Bishop', 'Knight', 'Rook', 'Queen', 'King' {
-      body[data-piece-set3d='#{$name}'] .main-board .#{to-lower-case($type)}.#{to-lower-case($color)} {
+      body[data-piece-set3d='#{$name}'] .main-board .#{to-lower-case($type)}.#{to-lower-case($color)},
+      body[data-piece-set3d='#{$name}']
+        .no-square:not(.is2d)
+        .#{to-lower-case($type)}.#{to-lower-case($color)} {
         background-image: img-url('staunton/piece/#{$name}/#{$color}-#{$type}.png');
       }
     }
