--- a/ui/common/css/component/_subnav.scss
+++ b/ui/common/css/component/_subnav.scss
@@ -22,7 +22,7 @@
     }
 
     a {
-      font-family: roboto;
+      font-family: 'Roboto', Sans-Serif;
       display: flex;
       align-items: center;
       color: $c-font;
