--- a/ui/bits/css/streamer/_header.scss
+++ b/ui/bits/css/streamer/_header.scss
@@ -69,6 +69,7 @@
   z-index: 2;
 
   span {
+    @extend %roboto;
     position: absolute;
     transform: rotate(45deg);
     display: block;
@@ -77,7 +78,8 @@
     background-color: $c-primary;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     color: $c-over;
-    font: 700 18px/1 Roboto;
+    font-size: 18px;
+    font-weight: 700;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
     text-align: center;
