--- a/ui/common/css/theme/board/_board-3d.scss
+++ b/ui/common/css/theme/board/_board-3d.scss
@@ -71,9 +71,7 @@ $piece-files: (
   @each $color in 'White', 'Black' {
     @each $type in 'Pawn', 'Bishop', 'Knight', 'Rook', 'Queen', 'King' {
       body[data-piece-set3d='#{$name}'] .main-board .#{to-lower-case($type)}.#{to-lower-case($color)},
-      body[data-piece-set3d='#{$name}']
-        .no-square:not(.is2d)
-        .#{to-lower-case($type)}.#{to-lower-case($color)} {
+      body[data-piece-set3d='#{$name}'] .no-square .#{to-lower-case($type)}.#{to-lower-case($color)} {
         background-image: img-url('staunton/piece/#{$name}/#{$color}-#{$type}.png');
       }
     }
