increase site button spacing for anons

--- a/ui/common/css/header/_buttons.scss
+++ b/ui/common/css/header/_buttons.scss
@@ -16,7 +16,11 @@
     }
 
     font-size: 1.1rem;
-    padding: 0 0.7rem;
+    padding: 0 20px;
+
+    body[data-user] & {
+      padding: 0 0.7rem;
+    }
 
     &:hover {
       color: $c-font-clearer !important;
