--- a/ui/common/css/theme/board/_coords-colors.scss
+++ b/ui/common/css/theme/board/_coords-colors.scss
@@ -6,20 +6,20 @@ coords {
 }
 
 /** Alternating colors in rank/file/square labels */
-.cg-wrap.orientation-white coords.files coord:nth-child(odd),
-.cg-wrap.orientation-white coords.ranks coord:nth-child(even),
-.cg-wrap.orientation-black coords.files coord:nth-child(even),
-.cg-wrap.orientation-black coords.ranks coord:nth-child(odd),
-.cg-wrap coords.squares:nth-of-type(odd) coord:nth-child(odd),
-.cg-wrap coords.squares:nth-of-type(even) coord:nth-child(even) {
+.orientation-white .files :nth-child(odd),
+.orientation-white .ranks :nth-child(even),
+.orientation-black .files :nth-child(even),
+.orientation-black .ranks :nth-child(odd),
+coords.squares:nth-of-type(odd) :nth-child(odd),
+coords.squares:nth-of-type(even) :nth-child(even) {
   color: var(---cg-ccw, $coord-color-default);
 }
 
-.cg-wrap.orientation-white coords.files coord:nth-child(even),
-.cg-wrap.orientation-white coords.ranks coord:nth-child(odd),
-.cg-wrap.orientation-black coords.files coord:nth-child(odd),
-.cg-wrap.orientation-black coords.ranks coord:nth-child(even),
-.cg-wrap coords.squares:nth-of-type(odd) coord:nth-child(even),
-.cg-wrap coords.squares:nth-of-type(even) coord:nth-child(odd) {
+.orientation-white .files :nth-child(even),
+.orientation-white .ranks :nth-child(odd),
+.orientation-black .files :nth-child(odd),
+.orientation-black .ranks :nth-child(even),
+coords.squares:nth-of-type(odd) :nth-child(even),
+coords.squares:nth-of-type(even) :nth-child(odd) {
   color: var(---cg-ccb, $coord-color-default);
 }
