Improved responsiveness to join team requests

--- a/ui/bits/css/team/_show.scss
+++ b/ui/bits/css/team/_show.scss
@@ -151,4 +151,11 @@ $section-margin-more: 5vh;
   &__log {
     margin-bottom: 2em;
   }
+
+  @media (max-width: 1200px) {
+
+    .table-row {
+      display:block
+    }
+  }
 }
