--- a/ui/common/css/layout/_page-menu.scss
+++ b/ui/common/css/layout/_page-menu.scss
@@ -29,4 +29,10 @@
     /* ensure the content is as high as the menu */
     min-height: 100%;
   }
+  @media (max-width: 767px) {
+
+    .table-row {
+      display:block
+    }
+  }
 }
