--- a/ui/bits/css/team/_show.scss
+++ b/ui/bits/css/team/_show.scss
@@ -153,9 +153,8 @@ $section-margin-more: 5vh;
   }
 
   @media (max-width: 1200px) {
-
     .table-row {
-      display:block
+      display: block;
     }
   }
 }
