--- a/ui/common/css/layout/_page-menu.scss
+++ b/ui/common/css/layout/_page-menu.scss
@@ -30,9 +30,8 @@
     min-height: 100%;
   }
   @media (max-width: 767px) {
-
     .table-row {
-      display:block
+      display: block;
     }
   }
 }
