remove duplicated prev-next buttons, analysis button, board menu toggle, and center all icons

--- a/ui/round/css/_moves-col1.scss
+++ b/ui/round/css/_moves-col1.scss
@@ -67,6 +67,9 @@
       color: $c-font-clearer;
     }
   }
+  .buttons {
+    justify-content: space-around;
+  }
 
   .result {
     margin: 0;
@@ -102,7 +105,24 @@
     display: none;
   }
 
+  .col1-moves .fbt{
+    display: none;
+  }
+
   .fbt {
     line-height: 2.3rem;
   }
+  
+  .fbt.analysis {
+    display: none;
+  }
+
+  .noop {
+    display: none; 
+  }
+  
+  .board-menu-toggle {
+    display: none;
+  }
+
 }
