--- a/ui/local/css/setup/_local-setup.scss
+++ b/ui/local/css/setup/_local-setup.scss
@@ -1,3 +1,18 @@
+@mixin if-compressed {
+  @media (orientation: portrait) and (max-width: 500px), (orientation: landscape) and (max-height: 500px) {
+    @content;
+  }
+}
+
+:root {
+  ---white-image-url: url('/assets/lifat/bots/images/white-torso.webp');
+  ---black-image-url: url('/assets/lifat/bots/images/black-torso.webp');
+  ---scale-factor: 1;
+  @include if-compressed {
+    ---scale-factor: 0.5;
+  }
+}
+
 dialog .local-setup {
   @extend %flex-column;
   width: 100vw;
@@ -6,7 +21,6 @@ dialog .local-setup {
   border-radius: 5px;
 
   @include if-transp {
-    //@include back-blur();
     background-color: unset; //#ffffff48;
   }
 
@@ -15,18 +29,10 @@ dialog .local-setup {
     max-height: 800px;
   }
 
-  h2 {
-    //flex: initial;
-    //@media (orientation: landscape) and (max-height: 600px) {
-    display: none;
-    //}
-  }
-
   .local-view {
-    ---white-image-url: url('/assets/lifat/bots/images/white-torso.webp');
-    ---black-image-url: url('/assets/lifat/bots/images/black-torso.webp');
     position: relative;
-    padding: 2em 2em 0;
+    padding: calc(2em * var(---scale-factor));
+    padding-bottom: 0;
     flex-grow: 1;
     overflow: hidden;
   }
@@ -34,13 +40,20 @@ dialog .local-setup {
   .vs {
     display: grid;
     width: 100%;
-    height: calc(100% - 220px);
+    height: calc(100% - (32px + 192px * var(---scale-factor)));
+
     gap: 1em;
     @media (orientation: portrait) {
-      grid-template-rows: 1fr auto 1fr;
+      grid-template-rows: 1fr auto;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas:
+        'w b'
+        'a a';
     }
     @media (orientation: landscape) {
+      grid-template-rows: 1fr;
       grid-template-columns: 1fr auto 1fr;
+      grid-template-areas: 'w a b';
     }
   }
 
@@ -49,7 +62,10 @@ dialog .local-setup {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    @include if-compressed {
+      aspect-ratio: 3/4;
+    }
+    //height: 100%;
     border-radius: 10px;
     &::before {
       position: absolute;
@@ -59,6 +75,9 @@ dialog .local-setup {
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      @include if-compressed {
+        background-position: top;
+      }
     }
     /*&:hover {
       border: 1px dashed $c-border;
@@ -68,12 +87,14 @@ dialog .local-setup {
       border: 1px dashed $c-border;
     }
     &.white {
+      grid-area: w;
       background-color: hsl(37, 12%, 92%);
       &::before {
         background-image: var(---white-image-url);
       }
     }
     &.black {
+      grid-area: b;
       background-color: hsl(37, 5%, 23%); // #333;
       &::before {
         background-image: var(---black-image-url);
@@ -82,16 +103,17 @@ dialog .local-setup {
   }
   .placard {
     position: absolute;
-    white-space: pre;
-    bottom: 40px;
+    //white-space: pre;
+    bottom: calc(40px * var(---scale-factor) * var(---scale-factor)); // not typo
     left: 50%;
     transform: translateX(-50%);
-    width: min-content; //calc(100% - 64px);
+    width: max-content; //calc(100% - 64px);
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px 20px;
+    padding: calc(10px * var(---scale-factor)) calc(20px * var(---scale-factor) * var(---scale-factor));
     text-align: center;
-    font-size: 1.2em;
+    font-size: calc(0.4em + 0.8em * var(---scale-factor));
     opacity: 0.87;
     border-radius: 5px;
     background-color: #242424;
@@ -106,16 +128,18 @@ dialog .local-setup {
   }
 
   .actions {
+    grid-area: a;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     @media (orientation: portrait) {
       flex-direction: row;
+      justify-content: space-around;
     }
-    justify-content: center;
-    gap: 20px;
-    font-size: 32px;
+    gap: calc(20px * var(---scale-factor));
+    font-size: calc(32px * var(---scale-factor));
     button {
-      padding: 6px;
+      padding: calc(6px * var(---scale-factor));
       color: $c-font;
       &:hover {
         color: $c-font-clear;
@@ -124,7 +148,7 @@ dialog .local-setup {
   }
 
   .chin {
-    height: 120px;
+    //height: 120px;
     border-radius: 5px;
     border-top: 1px solid $c-border;
     background-color: $c-bg-zebra2;
@@ -133,19 +157,15 @@ dialog .local-setup {
   .card {
     position: absolute;
     top: 0;
-    width: 192px;
-    height: 192x;
+    //width: 192px;
+    //height: 192x;
     border-radius: 6px;
     background-color: #f0f0f0;
     border: 1px solid $c-border;
     //box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s;
     img {
-      width: 192px;
-    }
-    .undercard {
-      height: 64px;
-      background-color: gray;
+      width: calc(192px * var(---scale-factor));
     }
     label {
       font-weight: bold;
