--- a/ui/local/css/_vs-bot.scss
+++ b/ui/local/css/_vs-bot.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column nowrap;
   overflow: hidden;
-  max-height: var(--cg-height);
+  max-height: var(---cg-height);
 
   #bot-content {
     flex: 1 1 auto;
