--- a/ui/round/css/_layout.scss
+++ b/ui/round/css/_layout.scss
@@ -12,6 +12,9 @@
   grid-area: main;
   display: grid;
   grid-gap: $block-gap;
+  @include mq-is-col1 {
+    grid-gap: 0;
+  }
 
   &__app {
     grid-area: app;
