--- a/ui/learn/css/_board.scss
+++ b/ui/learn/css/_board.scss
@@ -1,16 +1,4 @@
 .learn__main {
-  item {
-    width: 70%;
-    height: 70%;
-    bottom: 15%;
-    @include inline-start(15%);
-    background-size: cover;
-    position: absolute;
-    transform: translate3d(0, 0, 0);
-    z-index: 1;
-    transition: all 1s;
-  }
-
   @keyframes soft-hue {
     50% {
       filter: hue-rotate(-10deg);
@@ -18,37 +6,45 @@
   }
 
   @keyframes soft-grow {
+    0% {
+      // transform: scale(1);
+      scale: 1;
+    }
     50% {
-      transform: scale(1.08);
+      // transform: scale(1.08);
+      scale: 1.08;
+    }
+    100% {
+      // transform: scale(1);
+      scale: 1;
     }
   }
 
   @keyframes apple-appear {
     0% {
       opacity: 0.5;
-      transform: scale(0) rotate(-360deg);
+      // transform: scale(0) rotate(-360deg);
+      rotate: -360deg;
     }
 
     100% {
       opacity: 1;
-      transform: scale(1) rotate(0);
+      // transform: scale(1) rotate(0);
+      rotate: 0;
     }
   }
 
-  square.has-item.move-dest {
-    background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 85, 0, 0.3) 80%);
-  }
+  &.apples .cg-wrap piece.pawn.black {
+    // TODO: give attribution https://www.svgrepo.com/svg/434273/star
+    background-image: url('../images/learn/star.svg');
+    transform-origin: 50px 50px;
+    // animation:
+    //   0.6s ease-in-out 0s 1 forwards apple-appear,
+    //   1.7s ease-in-out 0.7s infinite none soft-grow,
+    //   0.7s ease-in-out 0.7s infinite none soft-hue;
 
-  @keyframes slideIn {
-    0% {
-      opacity: 0;
-      filter: blur(15px);
-    }
-
-    100% {
-      opacity: 1;
-      filter: blur(0px);
-    }
+    animation: 0.7s ease-in-out 0.7s infinite none soft-hue;
+    // 1.7s ease-in-out 0.7s infinite none apple-appear;
   }
 
   @keyframes rankGlow {
@@ -129,32 +125,4 @@
   .piece-values cg-board piece.pawn::before {
     content: '1';
   }
-}
-
-// TODO:
-// Workaround for chessground 4.4 used in `ui/learn` page.
-// This selector has no effect for chessground 7.11.0 used in other pages.
-cg-container > cg-board > svg {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  @include inline-start(0);
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: z('cg__svg.cg-shapes');
-  opacity: 0.6;
-
-  image {
-    opacity: 0.5;
-  }
-}
-
-.apples .cg-wrap piece.pawn.black {
-  // TODO: give attribution https://www.svgrepo.com/svg/434273/star
-  background-image: url('../images/learn/star.svg');
-  // animation:
-  //   0.6s ease-in-out 0s 1 forwards apple-appear,
-  //   1.7s ease-in-out 0.7s infinite none soft-grow,
-  //   0.7s ease-in-out 0.7s infinite none soft-hue;
 }
