grab/grabbing cursor on movable cg pieces - closes #15341
requires removing `pointer-events: none`.
That rule has been here for more than 5 years and I couldn't see
a functional change when removing it.

--- a/ui/common/css/theme/board/_chessground.scss
+++ b/ui/common/css/theme/board/_chessground.scss
@@ -7,10 +7,6 @@ cg-board {
   left: 0;
   user-select: none;
   line-height: 0;
-
-  .manipulable & {
-    cursor: pointer;
-  }
 }
 
 cg-board::before {
@@ -129,10 +125,14 @@ piece {
   background-size: cover;
   z-index: z('cg__piece');
   will-change: transform;
-  pointer-events: none;
+
+  .manipulable & {
+    cursor: pointer;
+    cursor: grab;
+  }
 
   &.dragging {
-    cursor: move;
+    cursor: grabbing;
     z-index: z('cg__piece.dragging') !important;
   }
 
