--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -43,6 +43,7 @@ $hover-bg: $m-primary_bg--mix-30;
         color: $c-font-dimmer;
       }
       strong {
+        @extend %ellipsis;
         font-size: 1.2em;
         color: $c-font-dim;
       }
@@ -130,6 +131,7 @@ $hover-bg: $m-primary_bg--mix-30;
     }
 
     h1 {
+      @extend %ellipsis;
       @include fluid-size('font-size', 14px, 32px);
       color: $c-brag;
     }
@@ -178,6 +180,7 @@ $hover-bg: $m-primary_bg--mix-30;
   }
   &__round-select {
     &__name {
+      @extend %ellipsis;
       flex: 3 1 100%;
     }
     &__status {
@@ -391,6 +394,7 @@ $hover-bg: $m-primary_bg--mix-30;
 }
 
 .relay-tour__side {
+  overflow: hidden;
   &__header {
     position: relative;
   }
