better handle long broadcast tour/round names
closes #15309

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -35,7 +35,7 @@ $hover-bg: $m-primary_bg--mix-30;
       justify-content: center;
       background: $c-bg-box;
       gap: 1em;
-      padding: 1.5rem 0 2rem 0;
+      padding: 1.5rem 1em 2rem 1em;
       display: none;
       flex-flow: column;
       &::before {
@@ -43,7 +43,7 @@ $hover-bg: $m-primary_bg--mix-30;
         color: $c-font-dimmer;
       }
       strong {
-        @extend %ellipsis;
+        @extend %break-word;
         font-size: 1.2em;
         color: $c-font-dim;
       }
@@ -131,7 +131,7 @@ $hover-bg: $m-primary_bg--mix-30;
     }
 
     h1 {
-      @extend %ellipsis;
+      @extend %break-word;
       @include fluid-size('font-size', 14px, 32px);
       color: $c-brag;
     }
@@ -139,6 +139,7 @@ $hover-bg: $m-primary_bg--mix-30;
     &__content {
       @extend %flex-column;
       flex: 1;
+      min-width: 0; // somehow this prevents overflow when mselect is large
       gap: 1em;
       @include mq-at-least-col3 {
         gap: calc(var(---box-padding) / 3);
@@ -163,8 +164,12 @@ $hover-bg: $m-primary_bg--mix-30;
   }
 
   &__mselect {
+    @extend %ellipsis;
     flex: auto;
     @include fluid-size('font-size', 12px, 20px);
+    &.mselect__active {
+      overflow: visible;
+    }
     .fullscreen-mask {
       display: block;
     }
