make zen mode turn off sticky header

--- a/ui/common/css/header/_header.scss
+++ b/ui/common/css/header/_header.scss
@@ -63,6 +63,13 @@ body > header {
   }
 }
 
+body.zen {
+  @include topnav-unsticky;
+  header::before {
+    display: none;
+  }
+}
+
 #topnav .community-patron {
   @extend %flex-center;
   &::after {
