--- a/ui/common/css/abstract/_extends.scss
+++ b/ui/common/css/abstract/_extends.scss
@@ -70,6 +70,18 @@
   text-shadow: 0 1px 0 $c-font-shadow;
 }
 
+%metal-inverse {
+  background: linear-gradient(to bottom, $m-clearer_bg-page--mix-80, $m-clearer_body-gradient--mix-75);
+  color: $m-dimmer_font--mix-60;
+  text-shadow: 0 1px 0 $c-clearer;
+}
+
+%metal-inverse-hover {
+  background: linear-gradient(to bottom, $m-clearer_bg-page--mix-70, $m-clearer_body-gradient--mix-65);
+  color: $m-dimmer_font--mix-90;
+  text-shadow: 0 1px 0 $c-clearer;
+}
+
 %active-inset-shadow {
   box-shadow: 0 3px 4px hsla(0, 0, 0, 0.15) inset;
 }
