--- a/ui/common/css/theme/_light.scss
+++ b/ui/common/css/theme/_light.scss
@@ -10,12 +10,12 @@
   @return mix(#fff, $color, $weight);
 }
 
-$c-bg: hsl(0, 0%, 100%); // alias for $c-bg-high
+$c-bg: hsl(0, 0%, 100%); // $c-bg-high
 $c-bg-page: hsl(37, 10%, 92%);
 $c-bg-low: hsl(0, 0%, 89%);
 $c-bg-zebra: hsl(37, 12%, 96.5%);
 $c-bg-zebra2: hsl(37, 12%, 92%);
-$c-bg-popup: hsl(0, 0%, 100%); // alias for $c-bg
+$c-bg-popup: hsl(0, 0%, 100%);
 $c-body-gradient: hsl(37, 12%, 84%);
 $c-font: hsl(0, 0%, 30%);
 $c-primary: hsl(209, 77%, 46%);
