Hide chushogi games on col1 in profile

--- a/ui/game/css/_row.scss
+++ b/ui/game/css/_row.scss
@@ -24,6 +24,9 @@
     &:has(.v-chushogi) {
       display: flex;
       align-items: center;
+      @include breakpoint($mq-not-small) {
+        display: none;
+      }
     }
   }
   &__infos {
