--- a/ui/learn/css/_board.scss
+++ b/ui/learn/css/_board.scss
@@ -38,13 +38,13 @@
     // TODO: give attribution https://www.svgrepo.com/svg/434273/star
     background-image: url('../images/learn/star.svg');
     transform-origin: 50px 50px;
+    // TODO: reincorporate these animations
     // animation:
     //   0.6s ease-in-out 0s 1 forwards apple-appear,
     //   1.7s ease-in-out 0.7s infinite none soft-grow,
     //   0.7s ease-in-out 0.7s infinite none soft-hue;
 
     animation: 0.7s ease-in-out 0.7s infinite none soft-hue;
-    // 1.7s ease-in-out 0.7s infinite none apple-appear;
   }
 
   @keyframes rankGlow {
