--- a/ui/learn/css/_board.scss
+++ b/ui/learn/css/_board.scss
@@ -7,44 +7,37 @@
 
   @keyframes soft-grow {
     0% {
-      // transform: scale(1);
       scale: 1;
     }
     50% {
-      // transform: scale(1.08);
       scale: 1.08;
-    }
-    100% {
-      // transform: scale(1);
-      scale: 1;
     }
   }
 
   @keyframes apple-appear {
     0% {
       opacity: 0.5;
-      // transform: scale(0) rotate(-360deg);
+      scale: 0;
       rotate: -360deg;
     }
 
     100% {
       opacity: 1;
-      // transform: scale(1) rotate(0);
+      scale: 1;
       rotate: 0;
     }
   }
 
-  &.apples .cg-wrap piece.pawn.black {
-    // TODO: give attribution https://www.svgrepo.com/svg/434273/star
-    background-image: url('../images/learn/star.svg');
-    transform-origin: 50px 50px;
-    // TODO: reincorporate these animations
-    // animation:
-    //   0.6s ease-in-out 0s 1 forwards apple-appear,
-    //   1.7s ease-in-out 0.7s infinite none soft-grow,
-    //   0.7s ease-in-out 0.7s infinite none soft-hue;
+  .apple {
+    animation:
+      0.6s ease-in-out 0s 1 forwards apple-appear,
+      1.7s ease-in-out 0.7s infinite none soft-grow,
+      0.7s ease-in-out 0.7s infinite none soft-hue;
+  }
 
-    animation: 0.7s ease-in-out 0.7s infinite none soft-hue;
+  &.apples .cg-wrap piece.pawn.black {
+    // if the level has apples, we hide the black pawns that are used to represent them
+    background-image: none;
   }
 
   @keyframes rankGlow {
