Revert "grab/grabbing cursor on movable cg pieces - closes #15341"
This reverts commit 7caf56434dedb0240c67927e97db2afe02d4b385.

Without "pointer-events: none", the target square hover highlights don't work
anymore.

--- a/ui/common/css/theme/board/_chessground.scss
+++ b/ui/common/css/theme/board/_chessground.scss
@@ -7,6 +7,10 @@ cg-board {
   left: 0;
   user-select: none;
   line-height: 0;
+
+  .manipulable & {
+    cursor: pointer;
+  }
 }
 
 cg-board::before {
@@ -125,14 +129,10 @@ piece {
   background-size: cover;
   z-index: z('cg__piece');
   will-change: transform;
-
-  .manipulable & {
-    cursor: pointer;
-    cursor: grab;
-  }
+  pointer-events: none;
 
   &.dragging {
-    cursor: grabbing;
+    cursor: move;
     z-index: z('cg__piece.dragging') !important;
   }
 
