--- a/ui/analyse/css/study/_modal.scss
+++ b/ui/analyse/css/study/_modal.scss
@@ -73,5 +73,14 @@
       @extend %break-word-hard, %ellipsis;
       max-width: 100%;
     }
+    .preview-in-editor {
+      float: right;
+      margin-top: 0.2em;
+
+      i {
+        margin-right: 0.2em;
+        vertical-align: text-bottom;
+      }
+    }
   }
 }
