--- a/ui/common/css/theme/_transp.scss
+++ b/ui/common/css/theme/_transp.scss
@@ -52,3 +52,9 @@ $text-shadow: 0.5px 1px 1px #000;
     }
   }
 }
+
+$c-bg-sente: black;
+$c-font-sente: white;
+
+$c-bg-gote: white;
+$c-font-gonte: black;
