--- a/ui/common/css/theme/_default.scss
+++ b/ui/common/css/theme/_default.scss
@@ -123,3 +123,9 @@ $box-shadow:
   0 3px 1px -2px rgba(0, 0, 0, 0.2),
   0 1px 5px 0 rgba(0, 0, 0, 0.12);
 // $box-shadow: 0 2px 2px 0 rgba(0,0,0,.157);
+
+$c-bg-sente: $c-font;
+$c-font-sente: $c-bg-zebra;
+
+$c-bg-gote: $c-bg-zebra;
+$c-font-gote: $c-font;
