--- a/ui/round/css/_app-layout.scss
+++ b/ui/round/css/_app-layout.scss
@@ -77,6 +77,9 @@
     .ricons {
       margin: 1em 0;
     }
+    .keyboard-move {
+      display: none;
+    }
   }
 
   @include mq-at-least-col2 {
